# hope-threading

./: .gitignore  CMakeLists.txt
lib/: CMakeLists.txt
lib/cmake/: hope_thread-config.cmake.in
